# vendors_list

./: .gitattributes  .gitignore  CLAUDE.md  README.md  agent_tasks.md  justfile
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: auth.py  config.py  db.py  logging_config.py  main.py  middleware.py
backend/app/routers/: __init__.py  compliance.py  dashboard.py  listings.py  meta.py  releases.py  vendors.py
backend/app/schemas/: __init__.py
backend/app/seed/: loader.py  parse.py  reader.py  report.py
backend/app/services/: __init__.py  dashboard.py
backend/migrations/: _sql.py  env.py  script.py.mako
backend/migrations/sql/: 0001_core_schema.sql  0002_compliance_module.sql
backend/migrations/versions/: 0001_core_schema.py  0002_compliance_module.py  0003_category_sort_path.py  0004_dashboard_views.py  0005_vendor_where_allowed.py  0006_ensure_open_release.py
backend/scripts/: export_openapi.py  seed_vendors.py
backend/tests/: conftest.py  factories.py  test_config.py  test_dashboard_service.py  test_logging_config.py  test_middleware.py  test_seed_cli.py  test_seed_loader.py  test_seed_parse.py  test_seed_reader.py  test_smoke.py
backend/tests/api/: test_dashboard.py  test_listings.py  test_matrix.py  test_meta.py  test_projects.py  test_releases.py  test_vendors.py
backend/tests/db/: test_audit.py  test_category_sort_path.py  test_compliance.py  test_dashboard_api.py  test_dashboard_service.py  test_dashboard_views.py  test_ensure_open_release.py  test_freeze_release.py  test_listing_views.py  test_matrix.py  test_seed_loader.py  test_vendor_where_allowed.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DEVLOG.md  TECH_DEBT.md
docs/bug_report/: 2026-07-10-class-change-freeze-render-loop.md  2026-07-10-matrix-500-missing-function.md  2026-07-10-search-input-async-navigate.md  2026-07-10-vacuous-typecheck-ci-red.md  README.md
docs/devlog/: 2026-07-08-boilerplate-neon-migrations.md  2026-07-08-justfile-ciw-unification.md  2026-07-08-test-system.md  2026-07-09-design-system-integration.md  2026-07-09-excel-seed-import.md  2026-07-09-listing-matrix.md  2026-07-09-logging-system.md  2026-07-09-seed-writepath-decomposition.md  2026-07-10-dashboard-overview.md  2026-07-10-genesis-release.md  2026-07-11-app-shell-layout.md  2026-07-11-vendor-card.md  2026-07-12-vendor-card-polish.md  2026-07-12-where-allowed-polish.md  2026-07-13-faster-db-tests.md  2026-07-13-vendor-card-edit-mode.md  2026-07-14-where-allowed-edit-clipping.md  2026-07-15-matrix-restyle.md  README.md
docs/instructions/: neon-region-migration.md
docs/superpowers/plans/: 2026-07-08-test-system.md  2026-07-09-START.md  2026-07-09-design-system-integration.md  2026-07-09-excel-seed-import.md  2026-07-09-listing-matrix.md  2026-07-09-logging-system.md  2026-07-09-seed-writepath-decomposition.md  2026-07-10-dashboard-overview.md  2026-07-11-app-shell-layout.md  2026-07-11-vendor-card.md  2026-07-12-vendor-card-polish.md  2026-07-12-where-allowed-polish.md  2026-07-13-vendor-card-edit-mode.md  2026-07-15-matrix-restyle.md
docs/superpowers/specs/: 2026-07-08-design-system-integration-design.md  2026-07-08-test-system-design.md  2026-07-09-excel-seed-import-design.md  2026-07-09-listing-matrix-design.md  2026-07-09-logging-system-design.md  2026-07-09-seed-writepath-decomposition-design.md  2026-07-10-dashboard-design.md  2026-07-10-genesis-release-design.md  2026-07-11-app-shell-layout-design.md  2026-07-11-vendor-card-design.md  2026-07-15-matrix-restyle-design.md  (+4 more)
frontend/: .env.example  .prettierignore  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.css.test.ts  main.tsx  router.test.tsx  router.tsx
(+67 files in other folders)
