[project]
name = "vendors-backend"
version = "0.1.0"
description = "Vendor-list & compliance API (FastAPI, schema-first over PostgreSQL 18)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # DB: SQLAlchemy Core (НЕ ORM) + async-драйвер
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    # Миграции (raw SQL через op.execute) + sync-драйвер для Alembic
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    # SSO / OIDC
    "authlib>=1.3",
    "httpx>=0.28",
    "pyjwt[crypto]>=2.10",
    # Импорт/экспорт Excel (этап 4-5 ТЗ)
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "anyio>=4.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008: Depends(...) в дефолтах аргументов — штатный паттерн FastAPI.
# UP046: дженерик Page намеренно на Generic[T] (совместимость Pydantic).
ignore = ["B008", "UP046"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]  # os.environ.setdefault до импорта app.main — намеренно

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Единый event loop на всю тест-сессию: позволяет держать ОДНО соединение к БД
# на сессию (см. conftest.py — session-scoped engine/connection), а не открывать
# новое на каждый тест. Против удалённого Neon это убирает ~N хендшейков и режет
# локальный прогон в разы (CI-раннер рядом с Neon, там эффект мал). Fixture- и
# test-loop ОБА должны быть session — иначе connection, созданный на session-loop,
# не доступен из function-loop теста ("attached to a different loop").
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "db: интеграционный тест, требует тестовую БД (DATABASE_URL_TEST); пропускается, если URL не задан",
]
